# GameOfLifeStreaming

./: .gitignore  CMakeLists.txt  README.md
Client/: Application.cpp  Application.h  CMakeLists.txt  Config.cpp  Config.h  main.cpp
GLUtils/: CMakeLists.txt
Server/: Application.cpp  Application.h  CMakeLists.txt  Config.cpp  Config.h  GameOfLife.cpp  GameOfLife.h  main.cpp
Streaming/: CMakeLists.txt  IClient.h  IServer.h  IStreamingClient.h  IStreamingConnection.h  IStreamingServer.h  StreamingFactory.cpp  StreamingFactory.h
Streaming/Asio/: CMakeLists.txt  Client.cpp  Client.h  Server.cpp  Server.h
Streaming/Beast/: Acceptor.cpp  Acceptor.h  CMakeLists.txt  Client.cpp  Client.h  Server.cpp  Server.h  Session.cpp  Session.h
Streaming/Poco/: CMakeLists.txt  Client.cpp  Client.h  Server.cpp  Server.h  ThreadPoolManager.cpp  ThreadPoolManager.h
